# STM32F1_MOTOR_DRV

./: .mxproject  CMakeLists.txt  Makefile  README.md  stm32f1_motor_drv.ioc
Core/Inc/: drv8833.h  i2c_dev.h  main.h
Core/Src/: drv8833.c  i2c.c  i2c_dev.c  main.c  tim.c
